modules/gdscript/tests/scripts/analyzer/errors/nullable_parameters.gd
func test():
    var bar: String? = ""
    foo(bar, bar)


func foo(a: String?, b: String):
    prints(a, b)